--- a/index.html
+++ b/index.html
@@ -5,17 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Fudi</title>
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- header -->
-    <div class="section-outer section-header">
+    <section class="section-outer section-start">
         <div class="section-inner">
-            section-header
+            <header class="section-start__header">
+                <img src="assets/img/logo.png" alt="Fudi logo" class="section-start__header-logo">
+                <nav class="section-start__header-nav">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                LOG IN
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                SIGN UP
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="assets/img/menu-bars.png" alt="menu bars">
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="section-start__wrapper">
+                <h4 class="section-start__wrapper-subtitle">
+                    Find your Favorite
+                </h4>
+                <h1 class="section-start__wrapper-title">
+                    RECIPES
+                </h1>
+                <a href="#" class="section-start__wrapper-btn">
+                    GET STARTED
+                </a>
+                <p class="section-start__wrapper-text">
+                    OR SEND US YOUR OWN RECIPES AND <a href="#">GET REWARDED!</a>
+                </p>
+            </div>
         </div>
-    </div>
+    </section>
     <!-- / header -->
 
     <!-- about -->
