Added section about

--- a/index.html
+++ b/index.html
@@ -54,52 +54,96 @@
     </section>
     <!-- / header -->
 
-    <!-- about -->
-    <div class="section-outer section-about">
-        <div class="section-inner">
-            section-about
-        </div>
-    </div>
-    <!-- / about -->
+    <main>
+        <!-- about -->
+        <section class="section-outer section-about">
+            <div class="section-inner">
+                <div class="section-about__inner">
+                    <div class="section-about__inner-item">
+                        <div class="section-about__inner-item__wrapper">
+                            <img src="assets/img/about-burger.png" alt="Get inspired">
+                        </div>
+                        <div class="section-about__inner-item__title">
+                            GET INSPIRED
+                        </div>
+                        <img src="assets/img/underline.png" alt="" class="underline">
+                        <div class="section-about__inner-item__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisc 
+                            Pellentesque vel enim a elit viverra elementuma.
+                            Aliquam erat volutpat. 
+                        </div>
+                    </div>
+                    <div class="section-about__inner-item">
+                        <div class="section-about__inner-item__wrapper">
+                            <img src="assets/img/about-money.png" alt="Get inspired">
+                        </div>
+                        <div class="section-about__inner-item__title">
+                            GET REWARDED
+                        </div>
+                        <img src="assets/img/underline.png" alt="" class="underline">
+                        <div class="section-about__inner-item__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisc 
+                            Pellentesque vel enim a elit viverra elementuma.
+                            Aliquam erat volutpat. 
+                        </div>
+                    </div>
+                    <div class="section-about__inner-item">
+                        <div class="section-about__inner-item__wrapper">
+                            <img src="assets/img/about-chef.png" alt="Get inspired">
+                        </div>
+                        <div class="section-about__inner-item__title">
+                            GET SOCIAL
+                        </div>
+                        <img src="assets/img/underline.png" alt="" class="underline">
+                        <div class="section-about__inner-item__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisc 
+                            Pellentesque vel enim a elit viverra elementuma.
+                            Aliquam erat volutpat. 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- / about -->
 
-    <!-- app -->
-    <div class="section-outer section-app">
-        <div class="section-inner">
-            section-app
-        </div>
-    </div>
-    <!-- / app -->
+        <!-- app -->
+        <section class="section-outer section-app">
+            <div class="section-inner">
+                section-app
+            </div>
+        </section>
+        <!-- / app -->
 
-    <!-- reviews -->
-    <div class="section-outer section-reviews">
-        <div class="section-inner">
-            section-reviews
-        </div>
-    </div>
-    <!-- / reviews -->
+        <!-- reviews -->
+        <section class="section-outer section-reviews">
+            <div class="section-inner">
+                section-reviews
+            </div>
+        </section>
+        <!-- / reviews -->
 
-    <!-- menu -->
-    <div class="section-outer section-menu">
-        <div class="section-inner">
-            section-menu
-        </div>
-    </div>
-    <!-- / menu -->
+        <!-- menu -->
+        <section class="section-outer section-menu">
+            <div class="section-inner">
+                section-menu
+            </div>
+        </section>
+        <!-- / menu -->
 
-    <!-- stats -->
-    <div class="section-outer section-stats">
-        <div class="section-inner">
-            section-stats
-        </div>
-    </div>
-    <!-- / stats -->
-
+        <!-- stats -->
+        <section class="section-outer section-stats">
+            <div class="section-inner">
+                section-stats
+            </div>
+        </section>
+        <!-- / stats -->
+    </main>
     <!-- footer -->
-    <div class="section-outer section-footer">
+    <footer class="section-outer section-footer">
         <div class="section-inner">
             section-footer
         </div>
-    </div>
+    </footer>
     <!-- / footer -->
 </body>
 </html>
