Added app section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <section class="section-outer section-start">
         <div class="section-inner">
             <header class="section-start__header">
-                <img src="assets/img/logo.png" alt="Fudi logo" class="section-start__header-logo">
+                <a href="#">
+                    <img src="assets/img/logo.png" alt="Fudi logo" class="section-start__header-logo">
+                </a>
                 <nav class="section-start__header-nav">
                     <ul>
                         <li>
@@ -63,43 +65,43 @@
                         <div class="section-about__inner-item__wrapper">
                             <img src="assets/img/about-burger.png" alt="Get inspired">
                         </div>
-                        <div class="section-about__inner-item__title">
+                        <h4 class="section-about__inner-item__title">
                             GET INSPIRED
-                        </div>
+                        </h4>
                         <img src="assets/img/underline.png" alt="" class="underline">
-                        <div class="section-about__inner-item__text">
+                        <p class="section-about__inner-item__text">
                             Lorem ipsum dolor sit amet, consectetur adipisc 
                             Pellentesque vel enim a elit viverra elementuma.
                             Aliquam erat volutpat. 
-                        </div>
+                        </p>
                     </div>
                     <div class="section-about__inner-item">
                         <div class="section-about__inner-item__wrapper">
                             <img src="assets/img/about-money.png" alt="Get inspired">
                         </div>
-                        <div class="section-about__inner-item__title">
+                        <h4 class="section-about__inner-item__title">
                             GET REWARDED
-                        </div>
+                        </h4>
                         <img src="assets/img/underline.png" alt="" class="underline">
-                        <div class="section-about__inner-item__text">
+                        <p class="section-about__inner-item__text">
                             Lorem ipsum dolor sit amet, consectetur adipisc 
                             Pellentesque vel enim a elit viverra elementuma.
                             Aliquam erat volutpat. 
-                        </div>
+                        </p>
                     </div>
                     <div class="section-about__inner-item">
                         <div class="section-about__inner-item__wrapper">
                             <img src="assets/img/about-chef.png" alt="Get inspired">
                         </div>
-                        <div class="section-about__inner-item__title">
+                        <h4 class="section-about__inner-item__title">
                             GET SOCIAL
-                        </div>
+                        </h4>
                         <img src="assets/img/underline.png" alt="" class="underline">
-                        <div class="section-about__inner-item__text">
+                        <p class="section-about__inner-item__text">
                             Lorem ipsum dolor sit amet, consectetur adipisc 
                             Pellentesque vel enim a elit viverra elementuma.
                             Aliquam erat volutpat. 
-                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -109,7 +111,38 @@
         <!-- app -->
         <section class="section-outer section-app">
             <div class="section-inner">
-                section-app
+                <div class="section-app-wrapper">
+                    <img src="assets/img/iphone.png" alt="" class="section-app-wrapper__img">
+                    <div class="section-app-wrapper__inner">
+                        <h3 class="section-app-wrapper__inner-title">
+                            INTRODUCING THE FUDI APP
+                        </h3>
+                        <p class="section-app-wrapper__inner-text">
+                            Morbi eget posuere dolor. Pellentesque cursus aliquet aliquet. Aeneanet 
+                            felis sit amet diam mollis ullamcorper. Nullam consequat sem a ante vest
+                            ibulum tristique. Suspendisse tristique lacus ac mattis porta. 
+                        </p>
+                        <p class="section-app-wrapper__inner-text">
+                            Vivamus ligula quam, vehicula non lacinia sed, faucibus sit amet libero. In 
+                            libero dui, eleifend eu nisi id, egestas fringilla odio. In varius quam a mas
+                            sa hendrerit ullamcorper a eu justo. Suspendisse porta mattis convallis. 
+                            Aenean tempus ligula ac odio rhoncus, quis aliquam dolor accumsan. 
+                        </p>
+                        <p class="section-app-wrapper__inner-text">
+                            Suspendisse aliquet felis consectetur libero congue, sed pulvinar diam 
+                            malesuada. Duis vehicula a nibh id hendrerit. Donec sit amet ultrices 
+                            ante, a mattis massa. 
+                        </p>
+                        <footer class="section-app-wrapper__inner-footer">
+                            <a href="#">
+                                <img src="assets/img/app-store.jpg" alt="app store">
+                            </a>
+                            <a href="#">
+                                <img src="assets/img/google-pay.jpg" alt="google play">
+                            </a>
+                        </footer>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- / app -->
