--- a/index.html
+++ b/index.html
@@ -150,7 +150,14 @@
         <!-- reviews -->
         <section class="section-outer section-reviews">
             <div class="section-inner">
-                section-reviews
+                <img src="assets/img/client's-picture.png" alt="" class="section-reviews__img">
+                <div class="section-reviews__comment">
+                    I am so happy because I found this recipe, and it just made my life easier.
+                    Thanks  so much for sharing!
+                </div>
+                <div class="section-reviews__name">
+                    Michael Dawson, San Francisco, CA
+                </div>
             </div>
         </section>
         <!-- / reviews -->
