Added menu section

--- a/index.html
+++ b/index.html
@@ -163,10 +163,95 @@
         <!-- / reviews -->
 
         <!-- menu -->
-        <section class="section-outer section-menu">
+        <div class="section-outer section-menu">
             <div class="section-inner">
-                section-menu
+                <h3 class="section-menu-inner__title">
+                    BROWSE BY CUISINES
+                </h3>
+                <img src="assets/img/underline.png" alt="" class="section-menu-inner__img">
             </div>
+        </div>
+        <section class="out-menu__wrapper">
+            <a href="#" class="out-menu__wrapper-item italian-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    327 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    ITALIAN
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item indian-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    856 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    INDIAN
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item french-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    27 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    FRENCH
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item steakhouse-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    174 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    STEAKHOUSE
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item seafood-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    731 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    SEAFOOD
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item sushi-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    237 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    SUSHI
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item mexican-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    529 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    MEXICAN
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item chinese-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    145 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    CHINESE
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item pizza-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    327 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    PIZZA
+                </div>
+            </a>
+            <a href="#" class="out-menu__wrapper-item american-menu-bg">
+                <div class="out-menu__wrapper-item__subtitle">
+                    1.437 Recipes
+                </div>
+                <div class="out-menu__wrapper-item__title">
+                    AMERICAN
+                </div>
+            </a>
         </section>
         <!-- / menu -->
 
