Added stats section

--- a/index.html
+++ b/index.html
@@ -258,7 +258,48 @@
         <!-- stats -->
         <section class="section-outer section-stats">
             <div class="section-inner">
-                section-stats
+                <div class="section-stats-wrapper">
+                    <div class="section-stats-wrapper-item">
+                        <div class="section-stats-wrapper-item__number">
+                            23,567
+                        </div>
+                        <div class="section-stats-wrapper-item__description">
+                            Recipes Available
+                        </div>
+                    </div>
+                    <div class="section-stats-wrapper-item">
+                        <div class="section-stats-wrapper-item__number">
+                            431,729
+                        </div>
+                        <div class="section-stats-wrapper-item__description">
+                            Active Users
+                        </div>
+                    </div>
+                    <div class="section-stats-wrapper-item">
+                        <div class="section-stats-wrapper-item__number">
+                            892,173
+                        </div>
+                        <div class="section-stats-wrapper-item__description">
+                            Positive Reviews 
+                        </div>
+                    </div>
+                    <div class="section-stats-wrapper-item">
+                        <div class="section-stats-wrapper-item__number">
+                            56,581
+                        </div>
+                        <div class="section-stats-wrapper-item__description">
+                            Photos &amp; Videos
+                        </div>
+                    </div>
+                    <div class="section-stats-wrapper-item">
+                        <div class="section-stats-wrapper-item__number">
+                            3,182
+                        </div>
+                        <div class="section-stats-wrapper-item__description">
+                            Spices and Herbs 
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- / stats -->
