--- a/index.html
+++ b/index.html
@@ -307,7 +307,14 @@
     <!-- footer -->
     <footer class="section-outer section-footer">
         <div class="section-inner">
-            section-footer
+            <div class="section-footer-wrapper">
+                <div class="section-footer-wrapper__copy">
+                    &copy;2014 Fudi. All Rights Reserved.
+                </div>
+                <div class="section-footer-wrapper__designed-by">
+                    DESIGN BY: <a href="#">WWW.BEKADES.COM</a>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- / footer -->
